--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
         {
             question: "Quel est le plus grand mammifère terrestre ?",
             answers: ["Éléphant", "Girafe", "Rhinocéros", "Ta maman"],
-            correctAnswer: "Éléphant"
+            correctAnswer: "Ta maman"
         },
         {
             question: "Combien de continents y a-t-il sur Terre ?",
             answers: ["5", "6", "7", "Ta maman"],
-            correctAnswer: "7"
+            correctAnswer: "Ta maman"
         },
         {
             question: "Quel est le plus grand océan du monde ?",
             answers: ["Océan Atlantique", "Océan Indien", "Océan Pacifique", "Ta maman"],
-            correctAnswer: "Océan Pacifique"
+            correctAnswer: "Ta Maman"
         }
     ];
 
